[tool.poetry]
name = "del"
version = "0.1.0"
description = ""
authors = ["vilovnok <vilovnok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kagglehub = "^0.3.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
imblearn = "^0.0"
torch = "^2.5.0"
datasets = "^3.0.2"
transformers = "^4.46.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
